# probabilistic-methods-in-cryptography

./: BestApprox.cpp  BlockCipherX.hpp  CMakeLists.txt  CTR_DRBG.hpp  Cipher.hpp  EntropySource.hpp  Kuznechik.cpp  Kuznechik.hpp  Lab1.cpp  Lab1.hpp  Lab2.cpp  Lab2.hpp  Lab3.cpp  Lab3.hpp  Lab4.cpp  Lab4.hpp  LabsDefinitions.cpp  LabsDefinitions.hpp  RestoreKey.cpp  SubstituteGenerator.cpp  SubstituteGenerator.hpp  genTexts.cpp  good.txt  good2 аппроксимации.txt  good2.txt  good2inv.txt  main.cpp  test.cpp  test1.cpp  Семин Владислав ККСО-01-20 курсовая ВМК.odt
